@@ -1,3 +1,6 @@
+- don't cache media.cfg from the media when using a virtual one (ie a medium
+  for which we don't want to cache metadata)
+
 Version 6.32 - 29 October 2009
 
 - if package B obsoletes package A and if A is in potential orphans and B is
